@@ -17,6 +17,12 @@ sub _build_features
 		brightness => {
 			desc => 'Get current display brightness as percent on logarithmic scale',
 			mode => 'rw',
+			config => {
+				step => {
+					desc => 'brightness will be increased / decreased by this value',
+					value => 10,
+				},
+			},
 		},
 	};
 }
